--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-modal": "^3.10.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
